--- a/page/component/pages/navigator/navigator.wxml
+++ b/page/component/pages/navigator/navigator.wxml
@@ -12,6 +12,9 @@
       <navigator url="redirect?title=redirect" redirect hover-class="other-navigator-hover">
         <button type="default">在当前页打开</button>
       </navigator>
+      <navigator target="miniProgram" open-type="navigate" app-id="wx4f1b24bdc99fa23b" version="release">
+         <button type="default">打开小程序</button>
+        </navigator>
     </view>
   </view>
 
