--- a/miniprogram/page/component/pages/image/image.wxml
+++ b/miniprogram/page/component/pages/image/image.wxml
@@ -14,7 +14,7 @@
     <view class="page-section page-section-gap">
       <view class="page-section-title">Internet Image</view>
       <view class="page-section-ctn">
-        <image class="image" src="../../resources/pic/2.jpg"/>
+        <image class="image" src="{{imageUrl}}"/>
       </view>
     </view>
   </view>
