--- a/miniprogram/page/component/pages/scroll-view/scroll-view.wxml
+++ b/miniprogram/page/component/pages/scroll-view/scroll-view.wxml
@@ -1,3 +1,4 @@
+
 <import src="../../../common/head.wxml" />
 <import src="../../../common/foot.wxml" />
 
@@ -29,7 +30,74 @@
         </scroll-view>
       </view>
     </view>
+    <view class="page-section">
+      <view class="page-section-title">
+        <text>自定义下拉刷新\n自定义：</text>
+      </view>
+      <view class="page-section-spacing">
+        <scroll-view
+          scroll-y style="width: 100%; height: 400px;"
+          refresher-enabled="{{true}}"
+          refresher-threshold="{{80}}"
+          refresher-default-style="none"
+          refresher-background="lightgreen"
+          bindrefresherpulling="{{refresh.onPulling}}"
+        >
+          <view slot="refresher" class="refresh-container"
+            style="display: block; width: 100%; height: 80px; background: #ECBDF0; display: flex; align-items: center;"
+          >
+            <view class="view1" style="position: absolute; color: white; text-align: center; width: 100%;">
+              下拉刷新
+            </view>
+          </view>
+
+          <view id="demo1" class="scroll-view-item_H demo-text-1"></view>
+          <view id="demo2"  class="scroll-view-item_H demo-text-2"></view>
+          <view id="demo3" class="scroll-view-item_H demo-text-3"></view>
+        </scroll-view>
+      </view>
+    </view>
+     <view class="page-section">
+      <view class="page-section-title">
+        <text>默认：</text>
+      </view>
+      <view class="page-section-spacing">
+        <scroll-view
+          scroll-y style="width: 100%; height: 400px;"
+          refresher-enabled="{{true}}"
+          refresher-threshold="{{100}}"
+          refresher-default-style="white"
+          refresher-background="lightgreen"
+          refresher-triggered="{{triggered}}"
+          bindrefresherpulling="onPulling"
+          bindrefresherrefresh="onRefresh"
+          bindrefresherrestore="onRestore"
+          bindrefresherabort="onAbort"
+        >
+          <view id="demo1" class="scroll-view-item_H demo-text-1"></view>
+          <view id="demo2"  class="scroll-view-item_H demo-text-2"></view>
+          <view id="demo3" class="scroll-view-item_H demo-text-3"></view>
+        </scroll-view>
+      </view>
+    </view>
   </view>
 
   <template is="foot" />
 </view>
+
+
+<wxs module="refresh">
+
+module.exports = {
+  onPulling: function(evt, instance) {
+    var p = Math.min(evt.detail.dy / 80, 1)
+    console.log(p)
+    var view = instance.selectComponent('.refresh-container')
+    view.setStyle({
+      opacity: p,
+      transform: "scale(" + p + ")"
+    })
+  }
+}
+
+</wxs>
