--- a/miniprogram/page/component/pages/button/button.wxml
+++ b/miniprogram/page/component/pages/button/button.wxml
@@ -27,6 +27,13 @@
         <button class="mini-btn" type="default" size="mini">按钮</button>
         <button class="mini-btn" type="warn" size="mini">按钮</button>
       </view>
+
+      <button type="primary" open-type="contact" bindcontact="handleContact" show-message-card="true" send-message-title="临时会话">打开客服会话</button>
+      <button type="primary" open-type="share">触发用户转发</button>
+      <button type="primary" open-type="getPhoneNumber" bindgetphonenumber="handleGetPhoneNumber">获取用户手机号</button>
+      <button type="primary" open-type="getUserInfo" lang="zh_CN" bindgetuserinfo="handleGetUserInfo">获取用户信息</button>
+      <button type="primary" open-type="openSetting" bindopensetting="handleOpenSetting">打开设置授权页</button>
+      <button type="primary" open-type="feedback">打开意见反馈</button>
     </view>
   </view>
 
