--- a/miniprogram/page/component/pages/video/video.wxml
+++ b/miniprogram/page/component/pages/video/video.wxml
@@ -6,7 +6,7 @@
 
   <view class="page-body">
     <view class="page-section tc">
-      <video id="myVideo" src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400" binderror="videoErrorCallback" danmu-list="{{danmuList}}" enable-danmu danmu-btn show-center-play-btn='{{false}}' show-play-btn="{{true}}" controls></video>
+      <video id="myVideo" src="http://wxsnsdy.tc.qq.com/105/20210/snsdyvideodownload?filekey=30280201010421301f0201690402534804102ca905ce620b1241b726bc41dcff44e00204012882540400&bizid=1023&hy=SH&fileparam=302c020101042530230204136ffd93020457e3c4ff02024ef202031e8d7f02030f42400204045a320a0201000400" binderror="videoErrorCallback" danmu-list="{{danmuList}}" enable-danmu danmu-btn show-center-play-btn='{{false}}' show-play-btn="{{true}}" controls enable-auto-rotation="{{ enableAutoRotation }}"></video>
 
       <view class="weui-cells">
         <view class="weui-cell weui-cell_input">
@@ -21,7 +21,18 @@
       <view class="btn-area">
         <button bindtap="bindSendDanmu" class="page-body-button" type="primary" formType="submit">发送弹幕</button>
       </view>
-    </view>
+
+      <view class="page-section">
+          <view class="weui-cells weui-cells_after-title">
+            <view class="weui-cell weui-cell_switch">
+              <view class="weui-cell__bd">开启自动旋转</view>
+              <view class="weui-cell__ft">
+                <switch model:checked="{{ enableAutoRotation }}" bindchange="handleSwitchChange"/>
+              </view>
+            </view>
+          </view>
+        </view>
+      </view>
   </view>
 
   <template is="foot" />
