--- a/miniprogram/page/component/pages/camera/camera.wxml
+++ b/miniprogram/page/component/pages/camera/camera.wxml
@@ -12,6 +12,23 @@
         binderror="error"
       >
       </camera>
+      <view class="page-section">
+          <view class="weui-cells weui-cells_after-title">
+            <view class="weui-cell weui-cell_switch">
+              <view class="weui-cell__bd">帧高度</view>
+              <view class="weui-cell__ft">
+                {{ frameHeight }}
+              </view>
+            </view>
+            <view class="weui-cell weui-cell_switch">
+              <view class="weui-cell__bd">帧宽度</view>
+              <view class="weui-cell__ft">
+                {{ frameWidth }}
+              </view>
+            </view>
+        </view>
+      </view>
+
       <view class="btn-area first-btn">
       <button type="primary" bindtap="togglePosition">切换摄像头</button>
       </view>
