add samples: getBatteryInfo

--- a/miniprogram/page/API/pages/get-battery-info/get-battery-info.wxml
+++ b/miniprogram/page/API/pages/get-battery-info/get-battery-info.wxml
@@ -2,16 +2,30 @@
 <import src="../../../common/foot.wxml" />
 
 <view class="container">
-  <template is="head" data="{{title: '获取手机电量'}}"/>
+  <template is="head" data="{{title: 'getBatteryInfo'}}"/>
 
   <view class="page-body">
   	<view class="page-section">
-      <view class="battery-info">
-        <text class="info-text" wx:if="{{level}}">当前电量: {{level}} %</text>
-        <text class="info-text" wx:if="{{isCharging}}">充电中</text>
+    <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__hd">
+            <view class="weui-label">当前电量</view>
+          </view>
+          <view class="weui-cell__bd">
+            <input class="weui-input" type="text" disabled="{{true}}" placeholder="未获取" value="{{level}}"></input>
+          </view>
+        </view>
+        <view class="weui-cell weui-cell_input">
+          <view class="weui-cell__hd">
+            <view class="weui-label">电池模式</view>
+          </view>
+          <view class="weui-cell__bd">
+            <input class="weui-input" type="text" disabled="{{true}}" placeholder="未获取" value="{{isCharging}}"></input>
+          </view>
+        </view>
       </view>
       <button type="primary" bind:tap="getBatteryInfo" >
-        获取电量信息
+        获取电量信息信息
       </button>
     </view>
   </view>
