--- a/miniprogram/page/API/pages/get-battery-info/get-battery-info.wxss
+++ b/miniprogram/page/API/pages/get-battery-info/get-battery-info.wxss
@@ -1,10 +1,2 @@
-.battery-info{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin: 40rpx 0;
-}
+@import "../../../common/lib/weui.wxss";
 
-.info-text {
-  line-height: 80rpx;
-}
