live-pusher finish & adjust live-player style

--- a/miniprogram/page/component/pages/live-pusher/live-pusher.wxss
+++ b/miniprogram/page/component/pages/live-pusher/live-pusher.wxss
@@ -1,8 +1,8 @@
 @import "../../../common/lib/weui.wxss";
 
-live-player {
+live-pusher {
   display: flex;
-  width: 100%;
+  margin: 12rpx auto;
   height: 350rpx;
 }
 
