--- a/miniprogram/page/component/pages/navigator/navigator.wxml
+++ b/miniprogram/page/component/pages/navigator/navigator.wxml
@@ -6,15 +6,15 @@
 
   <view class="page-body">
     <view class="btn-area">
-      <navigator url="navigate?title=navigate" hover-class="navigator-hover">
-        <button type="default">跳转到新页面</button>
+      <navigator url="navigate?title=navigate" hover-class="ohter-navigator">
+       <button type="default">跳转到新页面</button>
       </navigator>
       <navigator url="redirect?title=redirect" redirect hover-class="other-navigator-hover">
         <button type="default">在当前页打开</button>
       </navigator>
-      <navigator target="miniProgram" open-type="navigate" app-id="wx4f1b24bdc99fa23b" version="release">
-         <button type="default">打开小程序</button>
-        </navigator>
+      <navigator target="miniProgram" hover-class="other-navigator-hover" open-type="navigate" app-id="wx4f1b24bdc99fa23b" version="release">
+        <button type="default">打开小程序</button>
+      </navigator>
     </view>
   </view>
 
