--- a/miniprogram/page/weui/example/index.wxml
+++ b/miniprogram/page/weui/example/index.wxml
@@ -1,13 +1,40 @@
 <view class="page">
-    <view class="page__hd">
-        <view class="page__title">小程序UI组件库</view>
-        <view class="page__desc">小程序UI组件库是基于WeUI封装的组件库，是一套同微信原生视觉体验一致的组件库，由微信官方设计团队和小程序团队为微信小程序量身设计，令用户的使用感知更加统一。</view>
+    <view class="page__hd page-weui-large">
+      <view class="page__title__large">扩展能力</view>
     </view>
-    <view class="page__bd page__bd_spacing">
+    <view class="page__hd page-weui">
+      <view class="page__title">WeUI</view>
+    </view>
+    <view class="page__bd page-weui page__bd_spacing">
         <view class="kind-list">
             <block wx:for="{{list}}" wx:key="id">
                 <view class="kind-list__item">
                     <view id="{{item.id}}" class="weui-flex kind-list__item-hd {{item.open ? 'kind-list__item-hd_show' : ''}}" bindtap="kindToggle">
+                        <view class="weui-flex__item">{{item.name}}</view>
+                        <image class="kind-list__img" src="images/icon_nav_{{item.id}}.png"></image>
+                    </view>
+                    <view class="kind-list__item-bd {{item.open ? 'kind-list__item-bd_show' : ''}}">
+                        <view class="weui-cells {{item.open ? 'weui-cells_show' : ''}}">
+                            <block wx:for="{{item.pages}}" wx:for-item="page" wx:key="*this">
+                                <navigator url="{{page}}/{{page}}" class="weui-cell weui-cell_access">
+                                    <view class="weui-cell__bd">{{page}}</view>
+                                    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
+                                </navigator>
+                            </block>
+                        </view>
+                    </view>
+                </view>
+            </block>
+        </view>
+    </view>
+    <view class="page__hd page-weui">
+        <view class="page__title">扩展组件</view>
+    </view>
+     <view class="page__bd page-weui page__bd_spacing">
+        <view class="kind-list">
+            <block wx:for="{{extendedList}}" wx:key="id">
+                <view class="kind-list__item">
+                    <view id="{{item.id}}" class="weui-flex kind-list__item-hd {{item.open ? 'kind-list__item-hd_show' : ''}}" bindtap="kindExtenedListToggle">
                         <view class="weui-flex__item">{{item.name}}</view>
                         <image class="kind-list__img" src="images/icon_nav_{{item.id}}.png"></image>
                     </view>
