--- a/miniprogram/page/component/pages/video/video.wxss
+++ b/miniprogram/page/component/pages/video/video.wxss
@@ -1,9 +1,20 @@
 @import "../../../common/lib/weui.wxss";
 
 .weui-cells{
-  margin-top: 80rpx;
+  margin: 40rpx 30rpx 0;
   text-align: left;
 }
 .weui-label{
   width: 5em;
+}
+.auto-rotate-container {
+  margin: 40rpx 40rpx 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.video-container {
+  margin: 12rpx 6rpx;
+  display: flex;
+  justify-content: center;
 }
