--- a/miniprogram/page/component/pages/video/video.wxml
+++ b/miniprogram/page/component/pages/video/video.wxml
@@ -19,8 +19,14 @@
         picture-in-picture-mode="{{['push', 'pop']}}"
         bindenterpictureinpicture='bindVideoEnterPictureInPicture'
         bindleavepictureinpicture='bindVideoLeavePictureInPicture'
+        enable-auto-rotation="{{enableAutoRotation}}"
       ></video>
-
+      <view class="auto-rotate-container">
+        <view>开启自动旋转</view>
+        <view>
+          <switch model:checked="{{ enableAutoRotation }}" bindchange="handleSwitchChange" />
+        </view>
+      </view>
       <view class="weui-cells">
         <view class="weui-cell weui-cell_input">
           <view class="weui-cell__hd">
@@ -39,6 +45,7 @@
           <button type="primary" class="page-body-button" bindtap="bindPlayVideo">小窗模式</button>
         </navigator>
       </view>
+      
     </view>
   </view>
 
