--- a/miniprogram/page/weui/example/index.wxml
+++ b/miniprogram/page/weui/example/index.wxml
@@ -1,7 +1,12 @@
 <view class="page">
-    <view class="page__hd page-weui-large">
+    <!-- <view class="page__hd page-weui-large">
       <view class="page__title__large">扩展能力</view>
-    </view>
+      <view class="page__desc">扩展组件是对小程序内置组件能力的补充，包括一些常见的功能组件。</view>
+    </view> -->
+     <view class="index-hd">
+    <image class="index-logo" src="./images/logo_extended.png"></image>
+    <view class="index-desc">以下是对小程序内置组件能力的补充，包括 WeUI 组件库和一些常见的功能组件，具体属性参数详见 <navigator url="pages/doc-web-view/doc-web-view" class="weui-agree__link">小程序开发文档</navigator></view>
+  </view>
     <view class="page__hd page-weui">
       <view class="page__title">WeUI</view>
     </view>
@@ -53,6 +58,5 @@
         </view>
     </view>
     <view class="page__ft">
-        <image src="images/icon_footer.png" style="width: 84px; height: 19px;"></image>
     </view>
 </view>
