--- a/miniprogram/packageAPI/pages/wxs/nearby.wxml
+++ b/miniprogram/packageAPI/pages/wxs/nearby.wxml
@@ -4,7 +4,7 @@
   autoplay="{{true}}" interval="{{interval}}" circular='' duration="{{duration}}">
   <block wx:for="{{imgUrls}}">
     <swiper-item style="height:100%;">
-      <image src="{{item}}" class="slide-image" style="height:100%;width:100%;" mode="center" height="300"/>
+      <image src="{{item}}" class="slide-image" style="height:100%;width:100%;" mode="center" height="300" mode='aspectFit'/>
     </swiper-item>
   </block>
 </swiper>
