--- a/miniprogram/packageAPI/pages/wxs/stick-top.wxs
+++ b/miniprogram/packageAPI/pages/wxs/stick-top.wxs
@@ -3,14 +3,16 @@ var funcA = function (e, ins) {
   var scrollTop = e.detail.scrollTop
   if (scrollTop > 100) {
     ins.selectComponent('.page-group').setStyle({
-      "background-color": 'black'
+      // "background-color": 'black'
+      'z-index': '999',
+      'background': '#fff'
     }).addClass('page-group-position')
     ins.selectComponent('.page-banner .image').setStyle({
-      opacity: 0
+      opacity: 1 - Math.max(0, (scrollTop) / 100)
     })
   } else {
     ins.selectComponent('.page-group').setStyle({
-      "background-color": 'rgba(00, 00, 00, ' + Math.max(0, (scrollTop) / 100) + ')'
+      // "background-color": 'rgba(00, 00, 00, ' + Math.max(0, (scrollTop) / 100) + ')'
     }).removeClass('page-group-position')
     ins.selectComponent('.page-banner .image').setStyle({
       opacity: 1 - Math.max(0, (scrollTop) / 100)
