--- a/miniprogram/packageAPI/pages/wxs/wxs.wxml
+++ b/miniprogram/packageAPI/pages/wxs/wxs.wxml
@@ -6,11 +6,16 @@
 
   <view class="page-body">
     <view class="page-section">
+    <view class="btn-area">
       <button type="primary" data-nav="movable" bind:tap="handleNavChange">movable</button>
-      <button type="primary" data-nav="sidebar" bind:tap="handleNavChange">右滑显示侧边栏</button>
+    </view>
+    <view class="btn-area"></view>
+    <button type="primary" data-nav="sidebar" bind:tap="handleNavChange">右滑显示侧边栏</button>
+    <view class="btn-area"></view>
       <button type="primary" data-nav="stick-top" bind:tap="handleNavChange">滚动菜单栏贴顶</button>
-      <button type="primary" data-nav="nearby" bind:tap="handleNavChange">跟随 swiper 的图片切换</button>
-
+    <view class="btn-area">
+      <button type="primary" data-nav="nearby" bind:tap="handleNavChange">跟随 swiper 的图片切换</button>   
+    </view>
     </view>
   </view>
 
