--- a/miniprogram/page/component/pages/camera/camera.wxml
+++ b/miniprogram/page/component/pages/camera/camera.wxml
@@ -6,21 +6,30 @@
 
   <view class="page-body">
     <view class="page-body-wrapper">
+    <view style="margin-bottom: 20rpx"> camera 组件 </view>
       <camera
         flash="off"
         device-position="{{position}}"
         binderror="error"
       >
       </camera>
-      <view class="info-container">
-        <view>
-          帧高度：{{ frameHeight }}
+       <view wx:if="{{showCanvas}}" class="info-container">
+          <view style="margin: 20rpx 0">使用实时数据帧在 canvas 组件的展示</view>
+          <view>
+            帧高度：{{ frameHeight }}  帧宽度：{{ frameWidth }}
+          </view>
+          <canvas
+            id="webgl"
+            type="webgl"
+            canvas-id="canvas"
+            style="width: {{width}}px; height: {{height}}px;"
+          >
+          </canvas>
         </view>
-        <view>
-          帧宽度：{{ frameWidth }}
-        </view>
-      </view>
       <view class="btn-area first-btn">
+        <button bindtap="handleShowCanvas" type="primary">{{showCanvas ? "关闭实时帧数据模式": "开启实时帧数据模式"}}</button>
+      </view>
+      <view class="btn-area">
       <button type="primary" bindtap="togglePosition">切换摄像头</button>
       </view>
       <view class="btn-area">
@@ -37,7 +46,7 @@
           <button type="primary">扫描一维码</button>
         </navigator>
       </view>
-      <view class="preview-tips">预览</view>
+      <view class="preview-tips">点击录像或拍照即可在下方预览效果</view>
       <image wx:if="{{src}}" mode="widthFix" class="photo" src="{{src}}"></image>
       <video wx:if="{{videoSrc}}" class="video" src="{{videoSrc}}"></video>
     </view>
