--- a/miniprogram/miniprogram_npm/wxml-to-canvas/index.wxml
+++ b/miniprogram/miniprogram_npm/wxml-to-canvas/index.wxml
@@ -1,1 +1,2 @@
-<canvas id="canvas" type="2d" style="width: {{width}}px; height: {{height}}px;"></canvas>
+<canvas wx:if="{{use2dCanvas}}" id="weui-canvas" type="2d" style="width: {{width}}px; height: {{height}}px;"></canvas>
+<canvas wx:else canvas-id="weui-canvas" style="width: {{width}}px; height: {{height}}px;"></canvas>
