fix(camera): 修复camera相关的bug

--- a/miniprogram/packageComponent/pages/media/camera/camera.wxml
+++ b/miniprogram/packageComponent/pages/media/camera/camera.wxml
@@ -12,6 +12,8 @@
         flash="off"
         device-position="{{position}}"
         binderror="error"
+        resolution="high"
+        frame-size="large"
       >
       </camera>
        <view wx:if="{{showCanvas}}" class="info-container">
