--- a/miniprogram/packageAPI/pages/ar/photo-face-detect/photo-face-detect.wxml
+++ b/miniprogram/packageAPI/pages/ar/photo-face-detect/photo-face-detect.wxml
@@ -11,9 +11,9 @@
 </view>
 
 
-<view wx:if="{{anchor2DList}}">
-    <view wx:for="{{anchor2DList}}" style="margin: 30px auto; position: relative; width: {{faceImgWidth}}px; height: {{faceImgHeight}}px;">
-        <image src="{{faceImgUrl}}" style="width: {{faceImgWidth}}px; height: {{faceImgHeight}}px;" />
+<view wx:if="{{anchor2DList}}" style="position:relative;">
+    <image src="{{faceImgUrl}}" style="margin: 30px; width: {{faceImgWidth}}px; height: {{faceImgHeight}}px;" />
+    <view wx:for="{{anchor2DList}}" style="position:absolute; top: 0px; margin: 30px;  width: {{faceImgWidth}}px; height: {{faceImgHeight}}px;">
         <view style="position: absolute; left: {{item.origin.x * faceImgWidth}}px; top: {{item.origin.y * faceImgHeight}}px; width: {{item.size.width * faceImgWidth}}px; height: {{item.size.height * faceImgHeight}}px; border: solid red 2px"></view>
         <view wx:for="{{item.points}}" wx:key="id" style="position: absolute; left: {{item.x * faceImgWidth}}px; top: {{item.y * faceImgHeight}}px; width: 4px; height: 4px; background-color: #00ff00; border-radius: 50%;"></view>
     </view>
