--- a/miniprogram/packageSkyline/pages/address-book/index.less
+++ b/miniprogram/packageSkyline/pages/address-book/index.less
@@ -1,14 +1,18 @@
 page {
+  display: flex;
+  flex-direction: column;
   align-items: flex-end;
+  height: 100vh;
+  background-color: #f7f7f7;
 }
 
 .page-container {
   width: 100vw;
   flex: 1;
+  overflow: hidden;
 }
 
 .page {
-  background-color: #f7f7f7;
   color: rgba(0, 0, 0, .9);
   font-size: 16px;
   font-family: -apple-system-font, Helvetica Neue, Helvetica, sans-serif;
