--- a/miniprogram/packageSkyline/pages/share-element/list/index.wxss
+++ b/miniprogram/packageSkyline/pages/share-element/list/index.wxss
@@ -21,6 +21,10 @@ share-element {
   overflow: hidden;
 }
 
+/* image {
+  width: 100%;
+  height: 100%;
+} */
 
 
 /* # sourceMappingURL=index.wxss.map */
