fix: flex-item size

--- a/miniprogram/packageSkyline/pages/share-element/card/index.wxss
+++ b/miniprogram/packageSkyline/pages/share-element/card/index.wxss
@@ -23,6 +23,8 @@ share-element {
   background-color: #a1cfec8b;
   border-radius: 32px;
   overflow: hidden;
+  height: 100%; 
+  width: 100%
 }
 .description {
   font-size: 40px;
