--- a/miniprogram/packageSkyline/pages/share-element/list/index.wxss
+++ b/miniprogram/packageSkyline/pages/share-element/list/index.wxss
@@ -19,8 +19,13 @@ share-element {
   background-color: #a1cfec8b;
   border-radius: 32px;
   overflow: hidden;
+  height: 100%;
+  width: 100%;
 }
-
+image {
+  width: 100%;
+  height: 100%;
+}
 /* image {
   width: 100%;
   height: 100%;
