--- a/miniprogram/packageExtend/components/checkbox-group/checkbox-group.wxml
+++ b/miniprogram/packageExtend/components/checkbox-group/checkbox-group.wxml
@@ -1,6 +1,6 @@
-<checkbox-group class="{{extClass}}" wx-if="{{multi}}" bindchange="checkedChange">
+<checkbox-group class="{{extClass}}" wx:if="{{multi}}" bindchange="checkedChange">
     <slot></slot>
 </checkbox-group>
-<radio-group class="{{extClass}}" wx-else bindchange="checkedChange">
+<radio-group class="{{extClass}}" wx:else bindchange="checkedChange">
     <slot></slot>
 </radio-group>
