--- a/miniprogram/packageSkyline/pages/half-page/half-page/index.wxml
+++ b/miniprogram/packageSkyline/pages/half-page/half-page/index.wxml
@@ -1,6 +1,6 @@
 <!-- index.wxml -->
 <vertical-drag-gesture-handler id="pan" shouldResponseOnMove="shouldPanResponse" simultaneousHandlers="{{ ['scroll'] }}" onGestureEvent="handleVerticalDrag" style="flex: 1; overflow: auto;width: 100%;">
-	<view style="width: 100%; height: 100%;">
+	<view style="width: 100%; height: 100%;padding-top: 40px;">
 		<view class="bottom-sheet">
 			<view class="btn-wrp" bind:tap="back">
 				<view class="btn">
