--- a/miniprogram/packageSkyline/pages/half-page/half-page/index.wxml
+++ b/miniprogram/packageSkyline/pages/half-page/half-page/index.wxml
@@ -1,5 +1,5 @@
 <!-- index.wxml -->
-<vertical-drag-gesture-handler id="pan" shouldResponseOnMove="shouldPanResponse" simultaneousHandlers="{{ ['scroll'] }}" onGestureEvent="handleVerticalDrag" style="flex: 1; overflow: auto;width: 100%;">
+<vertical-drag-gesture-handler id="pan" worklet:should-response-on-move="shouldPanResponse" simultaneousHandlers="{{ ['scroll'] }}" worklet:ongesture="handleVerticalDrag" style="flex: 1; overflow: auto;width: 100%;">
 	<view style="width: 100%; height: 100%;padding-top: 40px;">
 		<view class="bottom-sheet">
 			<view class="btn-wrp" bind:tap="back">
@@ -9,8 +9,8 @@
 			</view>
 			<view class="title">评论列表</view>
 		</view>
-		<vertical-drag-gesture-handler id="scroll" native-view="scroll-view" shouldResponseOnMove="shouldScrollViewResponse" simultaneousHandlers="{{ ['pan'] }}">
-			<scroll-view style="flex: 1; overflow: auto; width: 100%;" scroll-y bindscroll="handleScroll" adjustDecelerationVelocity="adjustDecelerationVelocity" bounces="{{ false }}" refresher-enabled="{{ false }}" type="list">
+		<vertical-drag-gesture-handler id="scroll" native-view="scroll-view" worklet:should-response-on-move="shouldScrollViewResponse" simultaneousHandlers="{{ ['pan'] }}">
+			<scroll-view style="flex: 1; overflow: auto; width: 100%;" scroll-y bindscroll="handleScroll" worklet:adjust-deceleration-velocity="adjustDecelerationVelocity" bounces="{{ false }}" refresher-enabled="{{ false }}" type="list">
 				<view class="comment-item comment" wx:for="{{ list }}">
 					<!-- <image class="avatar" src="{{ item.userHeadImg }}"/>
 					<view class="comment">
