--- a/miniprogram/packageSkyline/pages/worklet/bottom-sheet/index.wxml
+++ b/miniprogram/packageSkyline/pages/worklet/bottom-sheet/index.wxml
@@ -2,9 +2,9 @@
 <mp-navigation-bar title="手势协商" back="{{true}}"></mp-navigation-bar>
 <view class="page-container">
 		<view class="place-hodler-widget"/>
-		<pan-gesture-handler id="pan" shouldResponseOnMove="shouldPanResponse" simultaneousHandlers="{{['scroll']}}" onGestureEvent="handlePan">
-				<vertical-drag-gesture-handler id="scroll" native-view="scroll-view" shouldResponseOnMove="shouldScrollViewResponse" simultaneousHandlers="{{['pan']}}">
-						<scroll-view class="list-wrp" scroll-y bounces="{{false}}" refresher-enabled="{{false}}" adjustDecelerationVelocity="adjustDecelerationVelocity" bindscroll="handleScroll" type="list">
+		<pan-gesture-handler id="pan" worklet:should-response-on-move="shouldPanResponse" simultaneousHandlers="{{['scroll']}}" worklet:ongesture="handlePan">
+				<vertical-drag-gesture-handler id="scroll" native-view="scroll-view" worklet:should-response-on-move="shouldScrollViewResponse" simultaneousHandlers="{{['pan']}}">
+						<scroll-view class="list-wrp" scroll-y bounces="{{false}}" refresher-enabled="{{false}}" worklet:adjust-deceleration-velocity="adjustDecelerationVelocity" bindscroll="handleScroll" type="list">
 								<view class="item" wx:for="{{list}}">
 										<view class="avatar"/>
 										<view class="comment"/>
