--- a/miniprogram/packageSkyline/pages/worklet/gesture/index.wxml
+++ b/miniprogram/packageSkyline/pages/worklet/gesture/index.wxml
@@ -1,6 +1,6 @@
 <mp-navigation-bar title="手势系统" back="{{true}}"></mp-navigation-bar>
 <view class="section-item">
-	<pan-gesture-handler onGestureEvent="handlepan">
+	<pan-gesture-handler worklet:ongesture="handlepan">
 		<view class="circle"/>
 	</pan-gesture-handler>
   <view class="title">拖动小球</view>
