--- a/miniprogram/packageComponent/pages/view/swiper/swiper.wxml
+++ b/miniprogram/packageComponent/pages/view/swiper/swiper.wxml
@@ -38,12 +38,12 @@
     <view class="page-section page-section-spacing">
       <view class="page-section-title">
         <text>幻灯片切换时长(ms)</text>
-        <text class="info">{{duration}}</text>
+        <text class="swiper-info">{{duration}}</text>
       </view>
       <slider bindchange="durationChange" value="{{duration}}" min="500" max="2000"/>
       <view class="page-section-title">
         <text>自动播放间隔时长(ms)</text>
-        <text class="info">{{interval}}</text>
+        <text class="swiper-info">{{interval}}</text>
       </view>
       <slider bindchange="intervalChange" value="{{interval}}" min="2000" max="10000"/>
     </view>
