--- a/miniprogram/packageComponent/pages/view/view/view.wxml
+++ b/miniprogram/packageComponent/pages/view/view/view.wxml
@@ -8,7 +8,8 @@
   <view class="page-body">
     <view class="page-section">
       <view class="page-section-title">
-        <text>flex-direction: row\n横向布局</text>
+        <text>flex-direction: row</text>
+        <text>横向布局</text>
       </view>
       <view class="page-section-spacing">
         <view class="flex-wrp" style="flex-direction:row;">
@@ -20,7 +21,8 @@
     </view>
     <view class="page-section">
       <view class="page-section-title">
-        <text>flex-direction: column\n纵向布局</text>
+        <text>flex-direction: column</text>
+        <text>纵向布局</text>
       </view>
       <view class="flex-wrp" style="flex-direction:column;">
         <view class="flex-item flex-item-V demo-text-1">A</view>
