--- a/miniprogram/packageXRFrame/components/xr-demo-viewer/index.wxml
+++ b/miniprogram/packageXRFrame/components/xr-demo-viewer/index.wxml
@@ -6,7 +6,8 @@
     <view class="intro">
       <view class="intro-detail">
         <view class="intro-title" ><text>{{title}}</text> <button class="share" open-type="share">分享给好友</button></view>
-        <view class="description" >{{intro}}</view>
+        <view class="description">{{intro}}</view>
+        <slot name="intro"></slot>
       </view>
     </view>
     <view wx:if="{{hint.length > 0}}">
