--- a/miniprogram/packageXRFrame/pages/template/xr-template-select/index.wxml
+++ b/miniprogram/packageXRFrame/pages/template/xr-template-select/index.wxml
@@ -1,7 +1,6 @@
 <xr-demo-viewer
-  title="基础案例"
-  intro="使用默认的PBR(基于物理渲染)材质下使用特定颜色的内置图形，场景包含基本的环境光与平行光。"
-  code="{{xmlCode}}"
+  title="点选物体与动画控制"
+  intro=""
 >
   <xr-template-select
     disable-scroll
