--- a/miniprogram/packageXRFrame/components/template/xr-template-select/index.wxml
+++ b/miniprogram/packageXRFrame/components/template/xr-template-select/index.wxml
@@ -1,15 +1,17 @@
 <xr-scene id="xr-scene" bind:ready="handleReady">
   <xr-assets bind:progress="handleAssetsProgress" bind:loaded="handleAssetsLoaded">
-    <xr-asset-material asset-id="standard-mat" effect="standard" />
+    <xr-asset-load type="gltf" asset-id="gltf-door" src="https://mmbizwxaminiprogram-1258344707.cos.ap-guangzhou.myqcloud.com/xr-frame/demo/door.glb" /> 
   </xr-assets>
   <xr-node>
-    <xr-mesh node-id="mesh-plane" position="0 -0.02 -4" rotation="0 0 0" scale="5 1 5" geometry="plane" material="standard-mat" uniforms="u_baseColorFactor:0.48 0.78 0.64 1" receive-shadow></xr-mesh>
-    <xr-mesh id="cube" node-id="mesh-cube" position="-1 0.5 -3.5" scale="1 1 1" rotation="0 45 0" geometry="cube" material="standard-mat" uniforms="u_baseColorFactor:0.298 0.764 0.85 1" cast-shadow></xr-mesh>
-    <xr-mesh node-id="mesh-cylinder" position="1 0.7 -3.5" scale="1 0.7 1" geometry="cylinder" material="standard-mat" uniforms="u_baseColorFactor:1 0.776 0.364 1" cast-shadow></xr-mesh>
-    <xr-mesh node-id="mesh-sphere" position="0 1.25 -5" scale="1.25 1.25 1.25" geometry="sphere" material="standard-mat" uniforms="u_baseColorFactor:0.937 0.176 0.368 1" cast-shadow></xr-mesh>
+    <xr-node node-id="camera-target" position="0 0 0"></xr-node>
+
+    <xr-gltf id="door" node-id="door" position="0 0 0" rotation="0 0 0" scale="0.01 0.01 0.01" model="gltf-door"
+      cube-shape="autoFit:true" shape-gizmo 
+    ></xr-gltf>
+
     <xr-camera
-      id="camera" node-id="camera" position="0 1.6 0" clear-color="0.925 0.925 0.925 1"
-      target="mesh-sphere"
+      id="camera" node-id="camera" position="-4 3 0" clear-color="0.925 0.925 0.925 1"
+      target="camera-target"
       camera-orbit-control=""
     ></xr-camera>
   </xr-node>
