--- a/miniprogram/packageXRFrame/pages/template/xr-template-gltfAnimation/index.wxml
+++ b/miniprogram/packageXRFrame/pages/template/xr-template-gltfAnimation/index.wxml
@@ -1,14 +1,12 @@
 <xr-demo-viewer
-  title="无光照glTF案例"
-  intro="应用 KHR_materials_unlit 材质的glTF案例，常见于已烘焙光照到贴图与卡通渲染模型"
-  code="{{xmlCode}}"
+  title="glTF动画案例"
+  intro="（资源较大，请稍候）"
 >
-  <xr-gltf-unlit
+  <xr-template-gltfAnimation
     disable-scroll
     id="main-frame"
     width="{{renderWidth}}"
     height="{{renderHeight}}"
     style="width:{{width}}px;height:{{height}}px;top:{{top}}px;left:{{left}}px;display:block;"
-    a="123"
   />
 </xr-demo-viewer>
